kubernetes/cloud/applications/envoy-gateway/nlb-http-redirects.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nlb-envoy-http-redirect
  namespace: gateway
spec:
  parentRefs:
  - name: nlb-envoy-gw
    namespace: gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
